adds comparator and tests